--- a/src/views/doctor/login.ejs
+++ b/src/views/doctor/login.ejs
@@ -1,448 +1,169 @@
-<!-- <!DOCTYPE html>
-<html>
-
-<head>
-  <title>Log in Page</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
 <body>
-  <div class="login-page">
+  <div class="square">
+    <i style="--clr:#00ff0a;"></i>
+    <i style="--clr:#ff0057;"></i>
+    <i style="--clr:#fffd44;"></i>
+    <div class="login">
+      <h2> Sign In</h2>
+      <form action="/doctorlogin" method="POST">
 
-    <div class="form">
-      <h2>LOG IN HERE</h2>
-      <form action="/doctorlogin" method="POST" class="validated-form">
-
-
-
-        <div class="mb-3">
-          <label class="form-label" for="username">Username</label>
-          <input class="form-control" type="text" id="username" name="username" required autofocus>
-
+        <div class="inputBx">
+          <input type="text" name="username" for="username" placeholder="Username">
         </div>
-
-
-        <div class="mb-3">
-          <label class="form-label" for="password">Password</label>
-          <input class="form-control" type="password" id="password" name="password" required>
+        <div class="inputBx">
+          <input type="password" name="password" for=" password" placeholder="Password">
         </div>
-
-        <button class="btn btn-success btn-block">LOG IN</button>
+        <div class="inputBx">
+          <input type="submit" value="Sign in">
+        </div>
+        <div class="links">
+          <a href="#">Forget Password</a>
+          <a href="#">Signup</a>
+        </div>
       </form>
-
 
     </div>
   </div>
 </body>
-
-</html>
-
-
 <style>
-  body {
-    background-color: transparent;
-    background-image: url("https://cdn.pixabay.com/photo/2016/06/02/02/33/triangles-1430105_960_720.png");
-    background-size: cover;
-  }
-
-  .login-page {
-    width: 360px;
-    padding: 8% 0 0;
-    margin: auto;
-    background-color: transparent;
-    border-radius: 10px;
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-  }
-
-  .avatar {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  .avatar img {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-  }
-
-  .form {
-    position: relative;
-    z-index: 1;
-    max-width: 360px;
-    margin: 0 auto 100px;
-    padding: 45px;
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 20px;
-  }
-
-  .form input[type="text"],
-  .form input[type="password"],
-  .form input [type="email"] {
-    font-family: 'Roboto', sans-serif;
-    outline: none;
-    width: 100%;
-    border: 0;
-    margin: 0 0 15px;
-    padding: 15px;
-    box-sizing: border-box;
-    font-size: 14px;
-    border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.7);
-  }
-
-  .form button {
-    font-family: 'Roboto', sans-serif;
-    text-transform: uppercase;
-    outline: none;
-    background-color: #2196F3;
-    width: 100%;
-    border: 0;
-    padding: 15px;
-    color: #FFFFFF;
-    font-size: 14px;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    cursor: pointer;
-    border-radius: 20px;
-  }
-
-  .form button:hover,
-  .form button:active,
-  .form button:focus {
-    background-color: #1976D2;
-  }
-
-  .form h2 {
-    color: #333333;
-    font-size: 28px;
-    margin: 0 0 30px;
-  }
-
-  .form p.message {
-    color: #666666;
-    font-size: 14px;
-    margin-top: 15px;
-  }
-
-  .form p.message a {
-    color: #2196F3;
-    text-decoration: none;
-  }
-
-  .form p.message a:hover {
-    text-decoration: underline;
-  }
-</style> -->
-
-
-
-<!DOCTYPE html>
-<html>
-
-<head>
-  <title>Animated Login Form</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-  <!-- <img class="wave" src="New folder\Responsive-Login-Form\img\wave.png"> -->
-  <div class="container">
-    <div class="img">
-      <!-- <img src="New folder\Responsive-Login-Form\img\bg.svg"> -->
-    </div>
-    <div class="login-content">
-      <form action="/doctorlogin" method="post" class="validated-form">
-        <!-- <img src="New folder\Responsive-Login-Form\img\avatar.svg"> -->
-        <h2 class="title">Welcome</h2>
-
-        <div class="input-div one">
-          <div class="i">
-            <i class="fas fa-user"></i>
-          </div>
-          <div class="div">
-
-            <label class="form-label" for="username">Username</label>
-            <input class="form-control" type="text" id="username" name="username" required autofocus>
-
-          </div>
-        </div>
-        <div class="input-div pass">
-          <div class="i">
-            <i class="fas fa-lock"></i>
-          </div>
-          <div class="div">
-            <label class="form-label" for="password">Password</label>
-            <input class="form-control" type="password" id="password" name="password" required>
-          </div>
-        </div>
-        <a href="#">Forgot Password?</a>
-        <input type="submit" class="btn" value="Login">
-      </form>
-    </div>
-  </div>
-  <!-- <script type="text/javascript" src="js/main.js"></script> -->
-
-  <script>
-    const inputs = document.querySelectorAll(".input");
-
-
-    function addcl() {
-      let parent = this.parentNode.parentNode;
-      parent.classList.add("focus");
-    }
-
-    function remcl() {
-      let parent = this.parentNode.parentNode;
-      if (this.value == "") {
-        parent.classList.remove("focus");
-      }
-    }
-
-
-    inputs.forEach(input => {
-      input.addEventListener("focus", addcl);
-      input.addEventListener("blur", remcl);
-    });
-  </script>
-</body>
-
-</html>
-
-<style>
-  body {
-    background-image: url('https://res.cloudinary.com/dy0chmf6u/image/upload/v1708210982/Untitled_design_4_q1vxbn.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+  @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap');
 
   * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
   }
 
   body {
-    font-family: 'Poppins', sans-serif;
-    overflow: hidden;
-  }
-
-  .wave {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    z-index: -1;
-  }
-
-  .container {
-    width: 100vw;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 7rem;
-    padding: 0 2rem;
-  }
-
-  .img {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
+    min-height: 100vh;
+    background: linear-gradient(45deg, #63fc48, #ef2d2d);
   }
 
-  .login-content {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-  }
-
-  .img img {
-    width: 500px;
-  }
-
-  form {
-    width: 360px;
-  }
-
-  .login-content img {
-    height: 100px;
-  }
-
-  .login-content h2 {
-    margin: 15px 0;
-    color: #333;
-    text-transform: uppercase;
-    font-size: 2.9rem;
-  }
-
-  .login-content .input-div {
+  .square {
     position: relative;
-    display: grid;
-    grid-template-columns: 7% 93%;
-    margin: 25px 0;
-    padding: 5px 0;
-    border-bottom: 2px solid #d9d9d9;
-  }
-
-  .login-content .input-div.one {
-    margin-top: 0;
-  }
-
-  .i {
-    color: #d9d9d9;
+    width: 500px;
+    height: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
-  .i i {
-    transition: .3s;
-  }
-
-  .input-div>div {
-    position: relative;
-    height: 45px;
-  }
-
-  .input-div>div>h5 {
+  .square i {
     position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #999;
-    font-size: 18px;
-    transition: .3s;
+    inset: 0;
+    border: 2px solid #fff;
+    transition: 0.5s;
   }
 
-  .input-div:before,
-  .input-div:after {
-    content: '';
+  .square i:nth-child(1) {
+    border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    animation: animate 6s linear infinite;
+  }
+
+  .square i:nth-child(2) {
+    border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
+    animation: animate 4s linear infinite;
+  }
+
+  .square i:nth-child(3) {
+    border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
+    animation: animate2 10s linear infinite;
+  }
+
+  .square:hover i {
+    border: 6px solid var(--clr);
+    filter: drop-shadow(0 0 20px var(--clr));
+  }
+
+  @keyframes animate {
+    0% {
+      transform: rotate(0deg);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  @keyframes animate2 {
+    0% {
+      transform: rotate(360deg);
+    }
+
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+
+  .login {
     position: absolute;
-    bottom: -2px;
-    width: 0%;
-    height: 2px;
-    background-color: #38d39f;
-    transition: .4s;
-  }
-
-  .input-div:before {
-    right: 50%;
-  }
-
-  .input-div:after {
-    left: 50%;
-  }
-
-  .input-div.focus:before,
-  .input-div.focus:after {
-    width: 50%;
-  }
-
-  .input-div.focus>div>h5 {
-    top: -5px;
-    font-size: 15px;
-  }
-
-  .input-div.focus>.i>i {
-    color: #38d39f;
-  }
-
-  .input-div>div>input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
+    width: 300px;
     height: 100%;
-    border: none;
-    outline: none;
-    background: none;
-    padding: 0.5rem 0.7rem;
-    font-size: 1.2rem;
-    color: #555;
-    font-family: 'poppins', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
   }
 
-  .input-div.pass {
-    margin-bottom: 4px;
-  }
-
-  a {
-    display: block;
-    text-align: right;
-    text-decoration: none;
-    color: #999;
-    font-size: 0.9rem;
-    transition: .3s;
-  }
-
-  a:hover {
-    color: #38d39f;
-  }
-
-  .btn {
-    display: block;
-    width: 100%;
-    height: 50px;
-    border-radius: 25px;
-    outline: none;
-    border: none;
-    background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
-    background-size: 200%;
-    font-size: 1.2rem;
+  .login h2 {
+    font-size: 2em;
     color: #fff;
-    font-family: 'Poppins', sans-serif;
-    text-transform: uppercase;
-    margin: 1rem 0;
+  }
+
+  .login .inputBx {
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+    /* Add margin-bottom to create a gap */
+  }
+
+  .login .inputBx input {
+    position: relative;
+    width: 100%;
+    padding: 12px 20px;
+    background: transparent;
+    border: 2px solid #fff;
+    border-radius: 40px;
+    font-size: 1.2em;
+    color: #fff;
+    box-shadow: none;
+    outline: none;
+  }
+
+  .login .inputBx input[type="submit"] {
+    width: 100%;
+    background: #0078ff;
+    background: linear-gradient(45deg, #ff357a, #fff172);
+    border: none;
     cursor: pointer;
-    transition: .5s;
-  }
 
-  .btn:hover {
-    background-position: right;
   }
 
 
-  @media screen and (max-width: 1050px) {
-    .container {
-      grid-gap: 5rem;
-    }
+
+
+  .login .inputBx input::placeholder {
+    color: rgba(255, 255, 255, 0.75);
   }
 
-  @media screen and (max-width: 1000px) {
-    form {
-      width: 290px;
-    }
-
-    .login-content h2 {
-      font-size: 2.4rem;
-      margin: 8px 0;
-    }
-
-    .img img {
-      width: 400px;
-    }
+  .login .links {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
   }
 
-  @media screen and (max-width: 900px) {
-    .container {
-      grid-template-columns: 1fr;
-    }
-
-    .img {
-      display: none;
-    }
-
-    .wave {
-      display: none;
-    }
-
-    .login-content {
-      justify-content: center;
-    }
+  .login .links a {
+    color: #fff;
+    text-decoration: none;
   }
 </style>
+
+</html>
